# amaterasu_ws_raspberrypi

./: .gitignore  frames_2025-04-12_14.42.36.gv  pid_logs.txt
rosbag2_2025_01_10-10_55_44/: metadata.yaml  rosbag2_2025_01_10-10_55_44_0.mcap
rosbag2_2025_03_21-23_46_34/: metadata.yaml  rosbag2_2025_03_21-23_46_34_0.mcap
rosbag2_2025_03_24-12_02_46/: metadata.yaml  rosbag2_2025_03_24-12_02_46_0.mcap
rosbag2_2025_04_12-14_39_33/: metadata.yaml  rosbag2_2025_04_12-14_39_33_0.mcap
rosbag2_2025_04_12-15_08_39/: metadata.yaml  rosbag2_2025_04_12-15_08_39_0.mcap
rosbag2_2025_05_03-17_11_47/: metadata.yaml  rosbag2_2025_05_03-17_11_47_0.mcap
rosbag2_2025_05_03-18_26_13/: metadata.yaml  rosbag2_2025_05_03-18_26_13_0.mcap
rosbag2_2025_05_03-18_27_30/: metadata.yaml  rosbag2_2025_05_03-18_27_30_0.mcap
src/: yaw
src/4wd_move/: CMakeLists.txt  main.cpp  package.xml
src/amaterasu/: package.xml  setup.cfg  setup.py
src/amaterasu/amaterasu/: ball_goal_client.py  bekir_ekf.py  camera_publisher.py  camera_subscriber.py  controller_withoutGPIO.py  emrecan_object_detector_publisher.py  fire_simulator.py  go_to_goal.py  imu.py  imu_ahrs.py  imu_mag.py  imu_marg.py  imu_pub.py  kalman.py  keyboard.py  keyboard_controller.py  localization.py  magnetometer.py  mock_publisher.py  motor.py  object_detector_publisher.py  object_detector_subscriber.py  pid.py  qmc5883l.py  robot_controller.py  scale_camera_publisher.py  sim_localization.py  square.py  square_client.py  temp_map.py  turn_90.py
src/amaterasu/config/: ekf.yaml
src/amaterasu/launch/: yaw_launch.py
src/amaterasu_interfaces/: CMakeLists.txt  package.xml
src/amaterasu_interfaces/action/: GoToGoal.action
src/amaterasu_interfaces/msg/: RobotState.msg
src/apriltag_msgs/msg/: AprilTagDetection.msg
src/diff_drive_rpi/: CMakeLists.txt  main  main.cpp  package.xml  test.cpp  test_encoder
src/diff_drive_rpi/include/diff_drive_rpi/: dc_motor.h  encoder.h  pid_controller.h  robot.h  robot_pins.h  rotary_encoder.hpp
src/diff_drive_rpi/src/: dc_motor.cpp  encoder.cpp  pid_controller.cpp  robot.cpp  rotary_encoder.cpp
src/imu_dmp_2/: package.xml  setup.cfg  setup.py
src/imu_dmp_2/config/: imu_config.yaml
src/imu_dmp_2/imu_dmp_2/: MPU6050.py  imu_publisher.py
src/imu_dmp_2/launch/: demo.launch.py  mpu6050.launch.py
src/imu_dmp_2/rviz/: demo.rviz
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: ekf.yaml
src/localization/launch/: localization_launch.py
src/localization/src/: odometry_brodcaster.cpp
src/mpu6050/: CMakeLists.txt  package.xml
src/mpu6050/include/mpu6050driver/: mpu6050driver.h  mpu6050sensor.h
src/mpu6050/launch/: mpu6050driver_launch.py
src/mpu6050/params/: mpu6050.yaml
src/mpu6050/src/: mpu6050driver.cpp
src/rpi_diff_hw_control-main/bringup/config/: my_controllers.yaml
src/rpi_diff_hw_control-main/bringup/launch/: ros2_control.launch.py
src/rpi_diff_hw_control-main/description/ros2_control/: ros2_control.xacro
src/rpi_diff_hw_control-main/description/urdf/: robot_core.xacro
src/rpi_diff_hw_control-main/hardware/: rpi_ros2_control.cpp
src/rpi_diff_hw_control-main/hardware/include/rpi_diff_hw_control/: rpi_differential_driver.hpp  rpi_ros2_control.hpp
src/turn_90/: CMakeLists.txt  main.cpp  package.xml
